--- a/src/app/profile-card/profile-card.component.scss
+++ b/src/app/profile-card/profile-card.component.scss
@@ -15,6 +15,7 @@ body {
 .card {
   background-color: #fff;
   max-width: 360px;
+  max-height: 550px;
   display: flex;
   flex-direction: column;
   overflow: hidden;
@@ -29,7 +30,6 @@ body {
   height: 11rem;
   display: flex;
   align-items: flex-end;
-  justify-content: center;
   box-sizing: border-box;
 }
 .card .banner svg {
