--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,18 @@
 <app-header></app-header>
-<div class="middle-container">
+<app-sub-menu></app-sub-menu>
+<div class="middle-main-container">
+  <div class="middle-container">
     <ng-container *ngFor="let card of cards">
-        <app-profile-card [card]="card"></app-profile-card>
+      <app-profile-card [card]="card"></app-profile-card>
     </ng-container>
+  </div>
+  <h1 class="bottom-main">Book Your Services Now !</h1>
 </div>
-
+<div class="bottom-main-container">
+  <div class="bottom-container">
+    <ng-container *ngFor="let card of cards">
+      <app-profile-card [card]="card"></app-profile-card>
+    </ng-container>
+  </div>
+  <h1 class="bottom-main">Most popular Services in this Week !</h1>
+</div>
