--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -53,57 +53,50 @@
 //   }
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;1,100;1,300&display=swap");
-* 
-{
+* {
   margin: 0;
   padding: 0;
   color: #f2f2f2;
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-nav 
-{
-  background: #2D2674;
+nav {
+  background: #2d2674;
   padding: 10px 40px 10px 70px;
   border-left: none;
-  height: 75px;
-  ul 
-  {
-    display: flex;
+  height: 100px;
+  ul {
     list-style: none;
     flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
     padding: 5px;
   }
-    li.logo 
-    {
-      flex: 1;
-      font-size: 30px;
-      font-weight: 700;
-    }
-    div.items 
-    {
-      padding: 0 25px;
-      display: inline-flex;
-    }
-      a 
-      {
-        text-decoration: none;
-        font-size: 18px;
-        padding: 0 12px;
-      }
-  .search-icon 
-  {
+  li.logo {
+    flex: 1;
+    font-size: 30px;
+    font-weight: 700;
+  }
+  div.items {
+    padding: 0 25px;
+    display: inline-flex;
+  }
+  a {
+    text-decoration: none;
+    font-size: 18px;
+    padding: 0 12px;
+   
+  }
+  .search-icon {
     height: 40px;
     width: 240px;
     display: flex;
     background: #f2f2f2;
     border-radius: 5px;
   }
-  input 
-  {
+  input {
     height: 100%;
     width: 200px;
     border: none;
@@ -113,24 +106,21 @@ nav
     font-size: 16px;
     border-radius: 5px 0 0 5px;
   }
-  .icon 
-  {
+  .icon {
     height: 100%;
     width: 40px;
     line-height: 40px;
-    border: 1px solid #d18d8d;
+    border: 1px solid #ffffff;
     text-align: center;
     background: #000000;
   }
-  span 
-  {
-    color: #222222;
+  span {
+    color: #ddff04;
     font-size: 18px;
   }
 }
 
-
-.card{
+.card {
   font-family: "Candara", sans-serif;
   width: 340px;
   overflow: hidden;
@@ -141,7 +131,7 @@ nav
   flex-direction: column;
 }
 
-.card-image img{
+.card-image img {
   width: 100%;
   height: 160px;
   border-top-left-radius: 10px;
@@ -149,7 +139,7 @@ nav
   object-fit: cover;
 }
 
-.profile-image img{
+.profile-image img {
   z-index: 1;
   width: 120px;
   height: 120px;
@@ -164,38 +154,38 @@ nav
   transition-property: transform;
 }
 
-.profile-image img:hover{
+.profile-image img:hover {
   transform: scale(1.1);
 }
 
-.card-content h3{
+.card-content h3 {
   font-size: 25px;
   text-align: center;
   margin: 0;
 }
 
-.card-content p{
+.card-content p {
   font-size: 16px;
   text-align: justify;
   padding: 0 20px 5px 20px;
 }
 
-.icons{
+.icons {
   text-align: center;
   padding-top: 5px;
   padding-bottom: 30px;
 }
 
-.icons a{
+.icons a {
   text-decoration: none;
   font-size: 20px;
-  color: #0ABDE3;
+  color: #0abde3;
   padding: 0 14px;
   transition-duration: 0.4s;
   transition-property: transform;
 }
 
-.icons a:hover{
-  color: #000;
+.icons a:hover {
+  color: #eaff00;
   transform: scale(1.5);
 }
