Done without header

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,13 @@
 <nav>
   <ul>
     <li class="logo">EAZYLife</li>
+
+
     <li class="search-icon">
       <input type="search" placeholder="Search" />
       <label class="icon"><span class="fas fa-search"></span></label>
     </li>
+    
     <div class="items">
       <li><a href="#">Home</a></li>
       <li><a href="#">About</a></li>
@@ -13,29 +16,39 @@
     </div>
   </ul>
 </nav>
-
-<!-- Profile card start-->
-<!-- <div class="card">
-  <div class="card-image">
-    <img src="easy-life\asset\123.jpg" alt="" />
+<!-- <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">EAZZYLife</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Dropdown
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+        </li>
+      </ul>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+    </div>
   </div>
-  <div class="profile-image">
-    <img src="easy-life\asset\2.png" alt="" />
-  </div>
-  <div class="card-content">
-    <h3>Andrea Joe</h3>
-    <p>
-      Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-      Lorem Ipsum has been the industry's standard dummy text ever since the
-      1500s.
-    </p>
-  </div>
-  <div class="icons">
-    <a href="#" class="fab fa-facebook-f"></a>
-    <a href="#" class="fab fa-youtube"></a>
-    <a href="#" class="fab fa-instagram"></a>
-    <a href="#" class="fab fa-twitter"></a>
-    <a href="#" class="fab fa-whatsapp"></a>
-  </div>
-</div> -->
-<!--Profile card end -->
+</nav> -->
