--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
+<div class="container-fluid">
 <app-header></app-header>
 <app-sub-menu></app-sub-menu>
+<!-- <app-welcome-banner></app-welcome-banner> -->
 <div class="middle-main-container">
   <div class="middle-container">
     <ng-container *ngFor="let card of cards">
@@ -15,4 +17,5 @@
     </ng-container>
   </div>
   <h1 class="bottom-main">Most popular Services in this Week !</h1>
+</div>
 </div>
