--- a/src/app/sub-menu/sub-menu.component.scss
+++ b/src/app/sub-menu/sub-menu.component.scss
@@ -2,6 +2,13 @@
     display: flex;
     justify-content:space-evenly;
     align-items: center;
+    a{
+        font-size: 18px;
+        text-decoration: dashed;
+        
+     
+    }
+
  
     
 }
