--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,18 +1,7 @@
 
-  .middle-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 10px;
-    padding: 20px;
-  }
-  .bottom-main{
-    padding: 20px;
-  }
-  .bottom-container{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 10px;
-    padding: 20px;
-  }
+
+.container {
+  max-width: 1920px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
