--- a/src/app/profile-card/profile-card.component.scss
+++ b/src/app/profile-card/profile-card.component.scss
@@ -3,7 +3,11 @@ body {
   font-size: 16px;
   color: #404040;
   font-family: Montserrat, sans-serif;
-  background-image: linear-gradient(to bottom right, #ff9eaa 0% 65%, #e860ff 95% 100%);
+  background-image: linear-gradient(
+    to bottom right,
+    #ff9eaa 0% 65%,
+    #e860ff 95% 100%
+  );
   background-position: center;
   background-attachment: fixed;
   margin: 0;
@@ -20,7 +24,7 @@ body {
   flex-direction: column;
   overflow: hidden;
   border-radius: 2rem;
-  box-shadow: 0px 1rem 1.5rem rgba(0,0,0,0.5);
+  box-shadow: 0px 1rem 1.5rem rgba(0, 0, 0, 0.5);
 }
 .card .banner {
   background-image: url("https://images.unsplash.com/photo-1545703549-7bdb1d01b734?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ");
@@ -36,7 +40,7 @@ body {
   background-color: #fff;
   width: 8rem;
   height: 8rem;
-  box-shadow: 0 0.5rem 1rem rgba(0,0,0,0.3);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.3);
   border-radius: 50%;
   transform: translateY(50%);
   transition: transform 200ms cubic-bezier(0.18, 0.89, 0.32, 1.28);
@@ -146,7 +150,8 @@ body {
   outline: none;
   box-sizing: border-box;
   border-radius: 1.5rem/50%;
-  transition: background-color 100ms ease-in-out, transform 200ms cubic-bezier(0.18, 0.89, 0.32, 1.28);
+  transition: background-color 100ms ease-in-out,
+    transform 200ms cubic-bezier(0.18, 0.89, 0.32, 1.28);
 }
 .card .actions .follow-btn button:hover {
   background-color: #efb10a;
